--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Classic Frogger game using javascript and typescript",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node api/index.js",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "phaser": "^3.22.0",
+    "serverless-http": "^3.2.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.44.2",
