--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-    ],
     "functions": {
-      "index.js": {
+      "api/index.js": {
         "runtime": "nodejs18.x"
       }
-    }
+    },
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
   }
   
